Fixed help popup close button visibility issue

--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ header h1 div {
   height: 32px;
   border-radius: 50%;
   border: none;
-  background-image: url("/images/close-button.png");
+  background-image: url("images/close-button.png");
   background-color: inherit;
   background-size: cover;
   background-position: center;
